--- a/horarios/horarios.html
+++ b/horarios/horarios.html
@@ -91,10 +91,10 @@
                   <tr>
                     <th>10:00</th>
                     <td rowspan="5" class="type-2">
-                      Charla WowChakra <span>2 type</span>
+                      Charla WowChakra
                     </td>
                     <td rowspan="5" class="type-3">
-                      Inscripciones Competición <span>3 type</span>
+                      Inscripciones Competición
                     </td>
                   </tr>
                   <tr>
@@ -103,10 +103,10 @@
                   <tr>
                     <th>11:00</th>
                     <td rowspan="5" class="type-4">
-                      Taller de dibujo con Laia López<span>2 type</span>
+                      Taller de dibujo con Laia López
                     </td>
                     <td rowspan="5" class="type-4">
-                      Seminario con youtuber Kompae<span>2 type</span>
+                      Seminario con youtuber Kompae
                     </td>
                   </tr>
                   <tr>
@@ -118,10 +118,10 @@
                   <tr>
                     <th>12:30</th>
                     <td rowspan="5" class="type-4">
-                      Bodas otakus <span>2 type</span>
+                      Bodas otakus
                     </td>
                     <td rowspan="5" class="type-5">
-                      Bailes Kpopers <span>4 type</span>
+                      Bailes Kpopers
                     </td>
                   </tr>
                   <tr>
@@ -130,10 +130,10 @@
                   <tr>
                     <th>13:30</th>
                     <td rowspan="3" class="type-3">
-                      Competición DDR<span>3 type</span>
+                      Competición DDR
                     </td>
                     <td rowspan="3" class="type-2">
-                      Charla Voces de Overwatch<span>1 type</span>
+                      Charla Voces de Overwatch
                     </td>
                   </tr>
                   <tr>
@@ -155,16 +155,16 @@
                   <tr>
                     <th>16:30</th>
                     <td rowspan="6" class="type-4">
-                      Bodas otakus <span>2 type</span>
+                      Bodas otakus
                     </td>
                     <td rowspan="4" class="type-1">
-                      Torneo Tekken<span>1 type</span>
+                      Torneo Tekken
                     </td>
                     <td rowspan="6" class="type-1">
-                      Torneo LOL<span>1 type</span>
+                      Torneo LOL
                     </td>
                     <td rowspan="2" class="type-1">
-                      Torneo Super Smash Bros<span>5 type</span>
+                      Torneo Super Smash Bros
                     </td>
                   </tr>
                   <tr>
@@ -173,7 +173,7 @@
                   <tr>
                     <th>17:30</th>
                     <td rowspan="2" class="type-1">
-                      Torneo Magic<span>5 type</span>
+                      Torneo Magic
                     </td>
                   </tr>
                   <tr>
@@ -182,10 +182,10 @@
                   <tr>
                     <th>19:00</th>
                     <td rowspan="2" class="type-1">
-                      Torneo YuGiOh<span>5 type</span>
+                      Torneo YuGiOh
                     </td>
                     <td rowspan="2" class="type-1">
-                      Torneo FIFA<span>5 type</span>
+                      Torneo FIFA
                     </td>
                   </tr>
                   <tr>
@@ -194,7 +194,7 @@
                   <tr>
                     <th>20:00</th>
                     <td rowspan="2" colspan="4" class="type-5">
-                      Concierto FAKY<span>5 type</span>
+                      Concierto FAKY
                     </td>
                   </tr>
                   <tr>
@@ -203,7 +203,7 @@
                   <tr>
                     <th>21:00</th>
                     <td rowspan="2" colspan="4" class="type-5">
-                      Concierto SUKISHA<span>5 type</span>
+                      Concierto SUKISHA
                     </td>
                   </tr>
                   <tr>
@@ -223,13 +223,13 @@
                   <tr>
                     <th>10:00</th>
                     <td rowspan="3" class="type-2">
-                      Firmas Laia López <span>2 type</span>
+                      Firmas Laia López
                     </td>
                     <td rowspan="3" class="type-2">
-                      Firmas H Alexander <span>2 type</span>
+                      Firmas H Alexander
                     </td>
                     <td rowspan="5" class="type-3">
-                      Inscripciones Competición <span>3 type</span>
+                      Inscripciones Competición
                     </td>
                   </tr>
                   <tr>
@@ -241,10 +241,10 @@
                   <tr>
                     <th>11:30</th>
                     <td rowspan="4" class="type-4">
-                      Taller de fotografía para Cosplay<span>2 type</span>
+                      Taller de fotografía para Cosplay
                     </td>
                     <td rowspan="3" class="type-4">
-                      Seminario: Ser autónomo con Ginny Di<span>2 type</span>
+                      Seminario: Ser autónomo con Ginny Di
                     </td>
                   </tr>
                   <tr>
@@ -253,28 +253,28 @@
                   <tr>
                     <th>12:30</th>
                     <td rowspan="5" class="type-4">
-                      Bodas otakus <span>2 type</span>
+                      Bodas otakus
                     </td>
                     <td rowspan="5" class="type-5">
-                      Bailes Kpopers <span>4 type</span>
+                      Bailes Kpopers
                     </td>
                   </tr>
                   <tr>
                     <th>13:00</th>
                     <td rowspan="2" class="type-2">
-                      Charla Voces de Overwatch<span>1 type</span>
+                      Charla Voces de Overwatch
                     </td>
                   </tr>
                   <tr>
                     <th>13:30</th>
                     <td rowspan="3" class="type-3">
-                      Competición DDR<span>3 type</span>
+                      Competición DDR
                     </td>
                   </tr>
                   <tr>
                     <th>14:00</th>
                     <td rowspan="2" class="type-2">
-                      Nate Gentile: Básicos de overclocking<span>1 type</span>
+                      Nate Gentile: Básicos de overclocking
                     </td>
                   </tr>
                   <tr>
@@ -293,16 +293,16 @@
                   <tr>
                     <th>16:30</th>
                     <td rowspan="6" class="type-4">
-                      Bodas otakus <span>2 type</span>
+                      Bodas otakus
                     </td>
                     <td rowspan="4" class="type-1">
-                      Torneo Tekken<span>1 type</span>
+                      Torneo Tekken
                     </td>
                     <td rowspan="6" class="type-1">
-                      Torneo LOL<span>1 type</span>
+                      Torneo LOL
                     </td>
                     <td rowspan="2" class="type-1">
-                      Torneo Super Smash Bros<span>5 type</span>
+                      Torneo Super Smash Bros
                     </td>
                   </tr>
                   <tr>
@@ -311,7 +311,7 @@
                   <tr>
                     <th>17:30</th>
                     <td rowspan="2" class="type-1">
-                      Torneo Magic<span>5 type</span>
+                      Torneo Magic
                     </td>
                   </tr>
                   <tr>
@@ -320,10 +320,10 @@
                   <tr>
                     <th>19:00</th>
                     <td rowspan="2" class="type-1">
-                      Torneo YuGiOh<span>5 type</span>
+                      Torneo YuGiOh
                     </td>
                     <td rowspan="2" class="type-1">
-                      Torneo FIFA<span>5 type</span>
+                      Torneo FIFA
                     </td>
                   </tr>
                   <tr>
@@ -332,7 +332,7 @@
                   <tr>
                     <th>20:00</th>
                     <td rowspan="2" colspan="4" class="type-5">
-                      Concierto Kiki vivi lily<span>5 type</span>
+                      Concierto Kiki vivi lily
                     </td>
                   </tr>
                   <tr>
@@ -341,7 +341,7 @@
                   <tr>
                     <th>21:00</th>
                     <td rowspan="2" colspan="4" class="type-5">
-                      Concierto Lady Beard<span>5 type</span>
+                      Concierto Lady Beard
                     </td>
                   </tr>
                   <tr>
@@ -361,13 +361,13 @@
                   <tr>
                     <th>10:00</th>
                     <td rowspan="10" class="type-5">
-                      Exposición coches frikis<span>5 type</span>
+                      Exposición coches frikis
                     </td>
                     <td rowspan="5" class="type-3">
-                      Inscripciones Competición <span>3 type</span>
+                      Inscripciones Competición
                     </td>
                     <td rowspan="10" class="type-5">
-                      Degustación comidas japonesas<span>5 type</span>
+                      Degustación comidas japonesas
                     </td>
                   </tr>
                   <tr>
@@ -385,10 +385,10 @@
                   <tr>
                     <th>12:30</th>
                     <td rowspan="5" class="type-4">
-                      Bodas otakus <span>2 type</span>
+                      Bodas otakus
                     </td>
                     <td rowspan="5" class="type-3">
-                      Pasarela Cosplay <span>4 type</span>
+                      Pasarela Cosplay
                     </td>
                   </tr>
                   <tr>
@@ -416,16 +416,16 @@
                   <tr>
                     <th>16:30</th>
                     <td rowspan="6" class="type-4">
-                      Bodas otakus <span>2 type</span>
+                      Bodas otakus
                     </td>
                     <td rowspan="4" class="type-1">
-                      Torneo Tekken<span>1 type</span>
+                      Torneo Tekken
                     </td>
                     <td rowspan="6" class="type-1">
-                      Torneo LOL<span>1 type</span>
+                      Torneo LOL
                     </td>
                     <td rowspan="2" class="type-1">
-                      Torneo Super Smash Bros<span>5 type</span>
+                      Torneo Super Smash Bros
                     </td>
                   </tr>
                   <tr>
@@ -434,7 +434,7 @@
                   <tr>
                     <th>17:30</th>
                     <td rowspan="2" class="type-1">
-                      Torneo Magic<span>5 type</span>
+                      Torneo Magic
                     </td>
                   </tr>
                   <tr>
@@ -443,10 +443,10 @@
                   <tr>
                     <th>19:00</th>
                     <td rowspan="2" class="type-1">
-                      Torneo YuGiOh<span>5 type</span>
+                      Torneo YuGiOh
                     </td>
                     <td rowspan="2" class="type-1">
-                      Torneo FIFA<span>5 type</span>
+                      Torneo FIFA
                     </td>
                   </tr>
                   <tr>
@@ -455,10 +455,10 @@
                   <tr>
                     <th>20:00</th>
                     <td rowspan="3" colspan="2" class="type-3">
-                      Competición DDR<span>3 type</span>
+                      Competición DDR
                     </td>
                     <td rowspan="5" colspan="2" class="type-5">
-                      Bailes Kpopers <span>4 type</span>
+                      Bailes Kpopers
                     </td>
                   </tr>
                   <tr>
