--- a/informacion/invitados/faky.html
+++ b/informacion/invitados/faky.html
@@ -142,7 +142,6 @@
                 </p>
                 <table>
                   <tbody>
-
                     <tr>
                       <th>Año</th>
                       <th>Disco</th>
@@ -155,12 +154,12 @@
                         The One
                       </td>
                       <td>
-                         -
+                        -
                       </td>
                     </tr>
 
                     <tr>
-                      <td>2016</tc>
+                      <td>2016</td>
                       <td>
                         Candy
                       </td>
@@ -178,7 +177,6 @@
                         -
                       </td>
                     </tr>
-
                   </tbody>
                 </table>
               </article>
@@ -197,13 +195,12 @@
                 >Contactar por correo</a
               >
             </div>
-          
+
             <div>
               <a href="../informacion/invitados.html">Voluntariado</a>
             </div>
           </div>
           <div class="colabout">
-            
             <div>
               <a href="../bases/torneos.html">Bases de Torneos</a>
             </div>
@@ -211,9 +208,7 @@
               <a href="../bases/concursos.html">Bases de Concursos</a>
             </div>
             <div>
-              <a href="../bases/politica.html"
-                >Política de privacidad</a
-              >
+              <a href="../bases/politica.html">Política de privacidad</a>
             </div>
           </div>
         </div>
@@ -240,7 +235,6 @@
         </div>
       </div>
     </footer>
- <script src="../../js/scroll.js"></script>
+    <script src="../../js/scroll.js"></script>
   </body>
-
 </html>
