--- a/index3.html
+++ b/index3.html
@@ -46,7 +46,7 @@
 
             <li><a href="./horarios/horarios.html">Horarios</a></li>
             <li><a href="./localizacion/localizacion.html">Localización</a></li>
-            <li><a href="./entradas/inscripcion.html'">Entradas</a></li>
+            <li><a href="./entradas/inscripcion.html">Entradas</a></li>
           </ul>
         </div>
       </div>
