--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <div class="dropdown">
             <button
               class="dropbtn"
-              onclick="location.href='./entradas/inscripcion.html'"
+              onclick="location.href='./entradas/inscripcion.html"
             >
               Entradas
             </button>
@@ -63,12 +63,11 @@
       </div>
     </header>
 
-    <main> 
+    <main>
       <div>
-          <img id="banner" src="./images/index/banner2.jpg" alt="logo" />
-        </div>
+        <img id="banner" src="./images/index/banner2.jpg" alt="logo" />
+      </div>
       <div class="main">
-       
         <div class="content">
           <div class="section">
             <!--confirmaciones-->
