--- a/index2.html
+++ b/index2.html
@@ -28,7 +28,7 @@
           <li><a href="./informacion/informacion.html">Información</a></li>
           <li><a href="./horarios/horarios.html">Horarios</a></li>
           <li><a href="./localizacion/localizacion.html">Localización</a></li>
-          <li><a href="./entradas/inscripcion.html'">Entradas</a></li>
+          <li><a href="./entradas/inscripcion.html">Entradas</a></li>
         </ul>
       </div>
     </div>
