--- a/entradas/inscripcion3.html
+++ b/entradas/inscripcion3.html
@@ -35,15 +35,15 @@
                   Información &#9660;
                 </button>
                 <div class="dropdown-content">
-                  <a id="font" href="./informacion/invitados.html">Invitados</a>
-                  <a href="./informacion/actividades.html">Actividades</a>
-                  <a href="./informacion/concursos.html">Concursos</a>
+                  <a id="font" href="../informacion/invitados.html">Invitados</a>
+                  <a href="../informacion/actividades.html">Actividades</a>
+                  <a href="../informacion/concursos.html">Concursos</a>
                 </div>
               </div>
             </li>
-            <li><a href="./horarios/horarios.html">Horarios</a></li>
-            <li><a href="./localizacion/localizacion.html">Localización</a></li>
-            <li><a href="./entradas/inscripcion.html'">Entradas</a></li>
+            <li><a href="../horarios/horarios.html">Horarios</a></li>
+            <li><a href="../localizacion/localizacion.html">Localización</a></li>
+            <li><a href="../entradas/inscripcion.html">Entradas</a></li>
           </ul>
         </div>
       </div>
