--- a/horarios/horarios3.html
+++ b/horarios/horarios3.html
@@ -51,7 +51,7 @@
           <div class="dropdown">
             <button
               class="dropbtn"
-              onclick="location.href='../entradas/inscripcion.html"
+              onclick="location.href='../entradas/inscripcion.html'"
             >
               Entradas
             </button>
