--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <div class="dropdown">
             <button
               class="dropbtn"
-              onclick="location.href='./entradas/inscripcion.html"
+              onclick="location.href='./entradas/inscripcion.html'"
             >
               Entradas
             </button>
