--- a/informacion/actividades.html
+++ b/informacion/actividades.html
@@ -53,7 +53,7 @@
           <div class="dropdown">
             <button
               class="dropbtn"
-              onclick="location.href='../entradas/inscripcion.html"
+              onclick="location.href='../entradas/inscripcion.html'"
             >
               Entradas
             </button>
