--- a/informacion/bases/politica.html
+++ b/informacion/bases/politica.html
@@ -114,13 +114,20 @@
           </button>
           <div class="panel">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
+              MANGUCA S.L. tratará las siguientes categorías de datos del Usuario:
+              <ul>
+                <li> 
+                  Datos identificativos: nombre, apellidos y DNI.
+                </li>
+                <li>
+                  Datos de contacto: dirección postal, dirección de correo electrónico y teléfono.
+                </li>
+                <li>
+                  Datos de facturación.
+                </li>
+              </ul> 
             </p>
           </div>
-
           <button class="accordion">
             4. ¿CUÁL ES LA LEGITIMACIÓN DEL TRATAMIENTO DE LOS DATOS DEL
             USUARIO?
