--- a/informacion/invitados/sukisha.html
+++ b/informacion/invitados/sukisha.html
@@ -54,7 +54,7 @@
           <div class="dropdown">
             <button
               class="dropbtn"
-              onclick="loc"location.href='../entradas/inscripcion.html'"
+              onclick="location.href='../entradas/inscripcion.html'"
             >
               Entradas
             </button>
@@ -80,112 +80,113 @@
             <a href="./poltattoo.html">Pol Tattoo</a>
           </div>
           <div id="information">
-        <div class="breadcrumb">
-          <ul>
-            <li><a href="../../index.html">Inicio</a></li>
-            <li><a href="../invitados.html">Invitados</a></li>
-            <li><a href="sukisha.html">Sukisha</a></li>
-          </ul>
-        </div>
-        <div class="titleBox">
-          <div id="title">
-            <span>Sukisha</span>
-          </div>
-        </div>
-        <div id="information">
-          <div class="picture">
-            <img src="../../images/artistas/artist5-avatar.png" />
-          </div>
-          <article>
-            <p>
-              Se trata del productor y cantante japonés SUKISHA, siendo la
-              primera estrella invitada de Manguca. Por primera vez fuera de
-              Japón se podrá disfrutar de los temas y la música de este maestro
-              del lo-fi hip hop, el género musical que más de moda está en
-              internet.
-            </p>
-            <div class="iframe">
-              <img
-                src="../../images/artistas/artist5-banner.jpg"
-                id="picture-article"
-              />
+            <div class="breadcrumb">
+              <ul>
+                <li><a href="../../index.html">Inicio</a></li>
+                <li><a href="../invitados.html">Invitados</a></li>
+                <li><a href="./sukisha.html">Sukisha</a></li>
+              </ul>
             </div>
-            <p>
-              La obra de este artista japonés destaca por sus composiciones de
-              estilo lo-fi hip hop, un enfoque estético de la música en donde
-              predomina el uso de medios de grabación de baja fidelidad.
-              Conocido también como Hiroyuki Ikezawa, es un productor que lo
-              pone de relieve no solo con este tipo de música. Tras este artista
-              encontramos temas de corte más pop como Blue in Green, Buddha’s
-              Palm, Pink Jewelry Dream o 4 and half minutes magic.
-            </p>
-            <div class="iframe">
-              <iframe
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/KvmmnAmHKVA"
-                frameborder="0"
-                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen
-              ></iframe>
+            <div class="titleBox">
+              <div id="title">
+                <span>Sukisha</span>
+              </div>
             </div>
-            <table>
-              <tbody>
+            <div id="information">
+              <div class="picture">
+                <img src="../../images/artistas/artist5-avatar.png" />
+              </div>
+              <article>
+                <p>
+                  Se trata del productor y cantante japonés SUKISHA, siendo la
+                  primera estrella invitada de Manguca. Por primera vez fuera de
+                  Japón se podrá disfrutar de los temas y la música de este
+                  maestro del lo-fi hip hop, el género musical que más de moda
+                  está en internet.
+                </p>
+                <div class="iframe">
+                  <img
+                    src="../../images/artistas/artist5-banner.jpg"
+                    id="picture-article"
+                  />
+                </div>
+                <p>
+                  La obra de este artista japonés destaca por sus composiciones
+                  de estilo lo-fi hip hop, un enfoque estético de la música en
+                  donde predomina el uso de medios de grabación de baja
+                  fidelidad. Conocido también como Hiroyuki Ikezawa, es un
+                  productor que lo pone de relieve no solo con este tipo de
+                  música. Tras este artista encontramos temas de corte más pop
+                  como Blue in Green, Buddha’s Palm, Pink Jewelry Dream o 4 and
+                  half minutes magic.
+                </p>
+                <div class="iframe">
+                  <iframe
+                    width="560"
+                    height="315"
+                    src="https://www.youtube.com/embed/KvmmnAmHKVA"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen
+                  ></iframe>
+                </div>
+                <table>
+                  <tbody>
+                    <tr>
+                      <th>Año</th>
+                      <th>Disco</th>
+                      <th>Premios</th>
+                    </tr>
 
-                <tr>
-                  <th>Año</th>
-                  <th>Disco</th>
-                  <th>Premios</th>
-                </tr>
+                    <tr>
+                      <td>2014</td>
+                      <td>
+                        Segment of Cakes
+                      </td>
+                      <td>
+                        -
+                      </td>
+                    </tr>
 
-                <tr>
-                  <td>2014</td>
-                  <td>
-                    Segment of Cakes
-                  </td>
-                  <td>
-                     -
-                  </td>
-                </tr>
+                    <tr>
+                      <td>2016</td>
+                      <td>
+                        Junk Food Society
+                      </td>
+                      <td>
+                        MTV Video Music Award<br />
+                        Teen Choice Award
+                      </td>
+                    </tr>
 
-                <tr>
-                  <td>2016</tc>
-                  <td>
-                    Junk Food Society
-                  </td>
-                  <td>
-                    MTV Video Music Award<br>
-                    Teen Choice Award
-                  </td>
-                </tr>
-
-                <tr>
-                  <td>2017</td>
-                  <td>
-                    Beside Your Bedside
-                  </td>
-                  <td>
-                    People's Choice Awards
-                  </td>
-                </tr>
-                <tr>
-                  <td>2017</td>
-                  <td>
-                    Over the Rainbow
-                  </td>
-                  <td>
-                    American Music Award<br>
-                    Grammy Award
-                  </td>
-                </tr>
-
-
-              </tbody>
-            </table>
-          </article>
+                    <tr>
+                      <td>2017</td>
+                      <td>
+                        Beside Your Bedside
+                      </td>
+                      <td>
+                        People's Choice Awards
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>2017</td>
+                      <td>
+                        Over the Rainbow
+                      </td>
+                      <td>
+                        American Music Award<br />
+                        Grammy Award
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </article>
+            </div>
+          </div>
         </div>
       </div>
     </main>
+    <!-- FOOTER -->
     <footer>
       <div class="footer">
         <div class="about">
@@ -196,23 +197,19 @@
                 >Contactar por correo</a
               >
             </div>
-          
             <div>
-              <a href="../informacion/invitados.html">Voluntariado</a>
+              <a href="../footer/voluntariado.html">Voluntariado</a>
             </div>
           </div>
           <div class="colabout">
-            
             <div>
-              <a href="../bases/torneos.html">Bases de Torneos</a>
+              <a href="../footer/torneos.html">Bases de Torneos</a>
             </div>
             <div>
-              <a href="../bases/concursos.html">Bases de Concursos</a>
+              <a href="../footer/concursos.html">Bases de Concursos</a>
             </div>
-         <div>
-              <a href="../bases/politica.html"
-                >Política de privacidad</a
-              >
+            <div>
+              <a href="../footer/politica.html">Política de privacidad</a>
             </div>
           </div>
         </div>
@@ -239,7 +236,7 @@
         </div>
       </div>
     </footer>
- <script src="../../js/scroll.js"></script>
+    <!-- SCRIPTS -->
+    <script src="../../js/scroll.js"></script>
   </body>
-
 </html>
