--- a/informacion/noticias/noticia2.html
+++ b/informacion/noticias/noticia2.html
@@ -54,7 +54,7 @@
           <div class="dropdown">
             <button
               class="dropbtn"
-              onclick="loc"location.href='../entradas/inscripcion.html'"
+              onclick="location.href='../entradas/inscripcion.html'"
             >
               Entradas
             </button>
@@ -98,7 +98,8 @@
         </div>
       </div>
     </main>
-    <footer>
+     <!-- FOOTER -->
+     <footer>
       <div class="footer">
         <div class="about">
           <div class="colabout">
@@ -108,20 +109,19 @@
                 >Contactar por correo</a
               >
             </div>
-
             <div>
-              <a href="../informacion/invitados.html">Voluntariado</a>
+              <a href="../footer/voluntariado.html">Voluntariado</a>
             </div>
           </div>
           <div class="colabout">
             <div>
-              <a href="../bases/torneos.html">Bases de Torneos</a>
+              <a href="../footer/torneos.html">Bases de Torneos</a>
             </div>
             <div>
-              <a href="../bases/concursos.html">Bases de Concursos</a>
+              <a href="../footer/concursos.html">Bases de Concursos</a>
             </div>
             <div>
-              <a href="../bases/politica.html">Política de privacidad</a>
+              <a href="../footer/politica.html">Política de privacidad</a>
             </div>
           </div>
         </div>
@@ -148,6 +148,7 @@
         </div>
       </div>
     </footer>
+    <!-- SCRIPTS -->
     <script src="../../js/scroll.js"></script>
   </body>
 </html>
