--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
         </aside>
       </div>
     </main>
+    <!-- FOOTER -->
     <footer>
       <div class="footer">
         <div class="about">
@@ -209,22 +210,21 @@
                 >Contactar por correo</a
               >
             </div>
-
             <div>
-              <a href="./informacion/bases/voluntariado.html">Voluntariado</a>
+              <a href="./informacion/footer/voluntariado.html">Voluntariado</a>
             </div>
           </div>
           <div class="colabout">
             <div>
-              <a href="./informacion/bases/torneos.html">Bases de Torneos</a>
+              <a href="./informacion/footer/torneos.html">Bases de Torneos</a>
             </div>
             <div>
-              <a href="./informacion/bases/concursos.html"
+              <a href="./informacion/footer/concursos.html"
                 >Bases de Concursos</a
               >
             </div>
             <div>
-              <a href="./informacion/bases/politica.html"
+              <a href="./informacion/footer/politica.html"
                 >Política de privacidad</a
               >
             </div>
@@ -232,15 +232,20 @@
         </div>
         <div class="contacto">
           <div class="contactos">
-            <img id="iconos" src="images/iconos/rss.png" alt="RSS" />
-            <img id="iconos" src="images/iconos/twitter.png" alt="Twitter" />
-            <img id="iconos" src="images/iconos/facebook.png" alt="Facebook" />
-            <img id="iconos" src="images/iconos/insta.png" alt="Instagram" />
+            <img id="iconos" src="./images/iconos/rss.png" alt="RSS" />
+            <img id="iconos" src="./images/iconos/twitter.png" alt="Twitter" />
+            <img
+              id="iconos"
+              src="./images/iconos/facebook.png"
+              alt="Facebook"
+            />
+            <img id="iconos" src="./images/iconos/insta.png" alt="Instagram" />
           </div>
           <p id="copyright">Manguca &#169; Todos los derechos reservados</p>
         </div>
       </div>
     </footer>
+    <!-- SCRIPTS -->
     <script src="./js/scroll.js"></script>
   </body>
 </html>
