--- a/informacion/concursos.html
+++ b/informacion/concursos.html
@@ -29,9 +29,9 @@
               Información &#9660;
             </button>
             <div class="dropdown-content">
-              <a href="invitados.html">Invitados</a>
-              <a href="actividades.html">Actividades</a>
-              <a href="concursos.html">Concursos</a>
+              <a href="./invitados.html">Invitados</a>
+              <a href="./actividades.html">Actividades</a>
+              <a href="./concursos.html">Concursos</a>
             </div>
           </div>
           <div class="dropdown">
@@ -66,7 +66,7 @@
         <div class="breadcrumb">
           <ul>
             <li><a href="../index.html">Inicio</a></li>
-            <li><a href="concursos.html">Concursos</a></li>
+            <li><a href="./concursos.html">Concursos</a></li>
           </ul>
         </div>
         <div class="titleBox">
@@ -151,6 +151,7 @@
         </div>
       </div>
     </main>
+    <!-- FOOTER -->
     <footer>
       <div class="footer">
         <div class="about">
@@ -161,20 +162,19 @@
                 >Contactar por correo</a
               >
             </div>
-
             <div>
-              <a href="./informacion/invitados.html">Voluntariado</a>
+              <a href="./footer/voluntariado.html">Voluntariado</a>
             </div>
           </div>
           <div class="colabout">
             <div>
-              <a href="./bases/torneos.html">Bases de Torneos</a>
+              <a href="./footer/torneos.html">Bases de Torneos</a>
             </div>
             <div>
-              <a href="./bases/concursos.html">Bases de Concursos</a>
+              <a href="./footer/concursos.html">Bases de Concursos</a>
             </div>
             <div>
-              <a href="./bases/politica.html">Política de privacidad</a>
+              <a href="./footer/politica.html">Política de privacidad</a>
             </div>
           </div>
         </div>
@@ -193,6 +193,7 @@
         </div>
       </div>
     </footer>
+    <!-- SCRIPTS -->
     <script src="../js/scroll.js"></script>
   </body>
 </html>
