--- a/informacion/footer/concursos.html
+++ b/informacion/footer/concursos.html
@@ -620,7 +620,8 @@
         </div>
       </div>
     </main>
-    <footer>
+     <!-- FOOTER -->
+     <footer>
       <div class="footer">
         <div class="about">
           <div class="colabout">
@@ -630,9 +631,8 @@
                 >Contactar por correo</a
               >
             </div>
-
             <div>
-              <a href="../informacion/invitados.html">Voluntariado</a>
+              <a href="./voluntariado.html">Voluntariado</a>
             </div>
           </div>
           <div class="colabout">
@@ -670,6 +670,7 @@
         </div>
       </div>
     </footer>
+    <!-- SCRIPTS -->
     <script src="../../js/acordeon.js"></script>
     <script src="../../js/scroll.js"></script>
   </body>
