--- a/informacion/footer/politica.html
+++ b/informacion/footer/politica.html
@@ -214,6 +214,7 @@
         </div>
       </div>
     </main>
+    <!-- FOOTER -->
     <footer>
       <div class="footer">
         <div class="about">
@@ -224,9 +225,8 @@
                 >Contactar por correo</a
               >
             </div>
-
             <div>
-              <a href="../informacion/invitados.html">Voluntariado</a>
+              <a href="./voluntariado.html">Voluntariado</a>
             </div>
           </div>
           <div class="colabout">
@@ -264,6 +264,7 @@
         </div>
       </div>
     </footer>
+    <!-- SCRIPTS -->
     <script src="../../js/acordeon.js"></script>
     <script src="../../js/scroll.js"></script>
   </body>
