--- a/informacion/invitados/meowri.html
+++ b/informacion/invitados/meowri.html
@@ -54,7 +54,7 @@
           <div class="dropdown">
             <button
               class="dropbtn"
-              onclick="loc"location.href='../entradas/inscripcion.html'"
+              onclick="location.href='../entradas/inscripcion.html'"
             >
               Entradas
             </button>
@@ -84,7 +84,7 @@
               <ul>
                 <li><a href="../../index.html">Inicio</a></li>
                 <li><a href="../invitados.html">Invitados</a></li>
-                <li><a href="meowri.html">Jenna Lynn</a></li>
+                <li><a href="./meowri.html">Jenna Lynn</a></li>
               </ul>
             </div>
             <div class="titleBox">
@@ -131,6 +131,7 @@
         </div>
       </div>
     </main>
+    <!-- FOOTER -->
     <footer>
       <div class="footer">
         <div class="about">
@@ -141,20 +142,19 @@
                 >Contactar por correo</a
               >
             </div>
-
             <div>
-              <a href="../informacion/invitados.html">Voluntariado</a>
+              <a href="../footer/voluntariado.html">Voluntariado</a>
             </div>
           </div>
           <div class="colabout">
             <div>
-              <a href="../bases/torneos.html">Bases de Torneos</a>
+              <a href="../footer/torneos.html">Bases de Torneos</a>
             </div>
             <div>
-              <a href="../bases/concursos.html">Bases de Concursos</a>
+              <a href="../footer/concursos.html">Bases de Concursos</a>
             </div>
             <div>
-              <a href="../bases/politica.html">Política de privacidad</a>
+              <a href="../footer/politica.html">Política de privacidad</a>
             </div>
           </div>
         </div>
@@ -181,6 +181,7 @@
         </div>
       </div>
     </footer>
+    <!-- SCRIPTS -->
     <script src="../../js/scroll.js"></script>
   </body>
 </html>
