--- a/informacion/invitados/poltattoo.html
+++ b/informacion/invitados/poltattoo.html
@@ -54,7 +54,7 @@
           <div class="dropdown">
             <button
               class="dropbtn"
-              onclick="loc"location.href='../entradas/inscripcion.html'"
+              onclick="location.href='../entradas/inscripcion.html'"
             >
               Entradas
             </button>
@@ -76,17 +76,15 @@
             <a href="./meowri.html">Jenna Lynn</a>
             <a href="./halex.html">H. Alexander</a>
             <a href="./ladybeard.html">Lady Beard</a>
-            <a class="active" href="./overwatchvoices.html"
-              >Voces de Overwatch</a
-            >
-            <a href="./poltattoo.html">Pol Tattoo</a>
+            <a href="./overwatchvoices.html">Voces de Overwatch</a>
+            <a class="active" href="./poltattoo.html">Pol Tattoo</a>
           </div>
           <div id="information">
             <div class="breadcrumb">
               <ul>
                 <li><a href="../../index.html">Inicio</a></li>
                 <li><a href="../invitados.html">Invitados</a></li>
-                <li><a href="poltattoo.html">Pol Tattoo</a></li>
+                <li><a href="./poltattoo.html">Pol Tattoo</a></li>
               </ul>
             </div>
             <div class="titleBox">
@@ -123,6 +121,7 @@
         </div>
       </div>
     </main>
+    <!-- FOOTER -->
     <footer>
       <div class="footer">
         <div class="about">
@@ -133,20 +132,19 @@
                 >Contactar por correo</a
               >
             </div>
-
             <div>
-              <a href="../informacion/invitados.html">Voluntariado</a>
+              <a href="../footer/voluntariado.html">Voluntariado</a>
             </div>
           </div>
           <div class="colabout">
             <div>
-              <a href="../bases/torneos.html">Bases de Torneos</a>
+              <a href="../footer/torneos.html">Bases de Torneos</a>
             </div>
             <div>
-              <a href="../bases/concursos.html">Bases de Concursos</a>
+              <a href="../footer/concursos.html">Bases de Concursos</a>
             </div>
             <div>
-              <a href="../bases/politica.html">Política de privacidad</a>
+              <a href="../footer/politica.html">Política de privacidad</a>
             </div>
           </div>
         </div>
@@ -173,6 +171,7 @@
         </div>
       </div>
     </footer>
+    <!-- SCRIPTS -->
     <script src="../../js/scroll.js"></script>
   </body>
 </html>
