--- a/localizacion/localizacion.html
+++ b/localizacion/localizacion.html
@@ -67,7 +67,7 @@
         <div class="breadcrumb">
           <ul>
             <li><a href="../index.html">Inicio</a></li>
-            <li><a href="localizacion.html">Localización</a></li>
+            <li><a href="./localizacion.html">Localización</a></li>
           </ul>
         </div>
         <div class="titleBox">
@@ -121,6 +121,7 @@
         </div>
       </div>
     </main>
+    <!-- FOOTER -->
     <footer>
       <div class="footer">
         <div class="about">
@@ -131,22 +132,21 @@
                 >Contactar por correo</a
               >
             </div>
-
             <div>
-              <a href="./informacion/invitados.html">Voluntariado</a>
+              <a href="../informacion/footer/voluntariado.html">Voluntariado</a>
             </div>
           </div>
           <div class="colabout">
             <div>
-              <a href="../informacion/bases/torneos.html">Bases de Torneos</a>
+              <a href="../informacion/footer/torneos.html">Bases de Torneos</a>
             </div>
             <div>
-              <a href="../informacion/bases/concursos.html"
+              <a href="../informacion/footer/concursos.html"
                 >Bases de Concursos</a
               >
             </div>
             <div>
-              <a href="../informacion/bases/politica.html"
+              <a href="../informacion/footer/politica.html"
                 >Política de privacidad
               </a>
             </div>
@@ -167,6 +167,7 @@
         </div>
       </div>
     </footer>
+    <!-- SCRIPTS -->
     <script src="../js/scroll.js"></script>
   </body>
 </html>
