--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="header">
         <div class="logo">
           <a href="index.html"
-            ><img src="./images/plantilla/logo.png" alt="logo"
+            ><img src="./images/plantilla/logo.png" alt="Logo Manguca"
           /></a>
         </div>
         <div class="navbar">
@@ -65,7 +65,7 @@
 
     <main>
       <div>
-        <img id="banner" src="./images/index/banner2.jpg" alt="logo" />
+        <img id="banner" src="./images/index/banner2.jpg" alt="Logo banner" />
       </div>
       <div class="main">
         <div class="content">
@@ -78,7 +78,10 @@
             <div class="artists">
               <div class="artist">
                 <a href="./informacion/invitados/overwatchvoices.html"
-                  ><img id="confirmation" src="./images/artistas/artist11.jpg"
+                  ><img
+                    id="confirmation"
+                    src="./images/artistas/artist11.jpg"
+                    alt="Invitados Overwatch"
                 /></a>
                 <div class="text">
                   <div id="rol">
@@ -95,6 +98,7 @@
                   <img
                     id="confirmation"
                     src="./images/artistas/artist12.jfif"
+                    alt="Invitado Pol Tattoo"
                   />
                 </a>
                 <div class="text">
