--- a/informacion/invitados/faky3.html
+++ b/informacion/invitados/faky3.html
@@ -65,7 +65,7 @@
               <a href="./overwatchvoices.html">Voces de Overwatch</a>
               <a href="./poltattoo.html">Pol Tattoo</a>
             </div>
-            <div id="information">
+            <div class="information-box">
               <div class="breadcrumb">
                 <ul>
                   <li><a href="../../index.html">Inicio</a></li>
@@ -78,7 +78,7 @@
                   <span>FAKY</span>
                 </div>
               </div>
-              <div id="information">
+              <div class="information">
                 <div class="picture">
                   <img src="../../images/artistas/artist1-avatar.jpg" />
                 </div>
