--- a/horarios/horarios3.html
+++ b/horarios/horarios3.html
@@ -515,7 +515,7 @@
       </footer>
       <script src="../js/tabs.js"></script>
       <script src="../js/scroll.js"></script>
-      <script src="./js/sidebar.js"></script>
+      <script src="../js/sidebar.js"></script>
 
   </body>
 </html>
